# Link

./: Cargo.toml  Dioxus.toml
core/: Cargo.toml  config.toml
core/src/: config.rs  lib.rs  prelude.rs  state.rs  storage.rs  traits.rs  utils.rs
core/src/api/: client.rs  constants.rs  factory.rs  mod.rs  schemas.rs
core/src/auth/: factory.rs  login.rs  mod.rs
core/src/helpers/: list.rs  mod.rs  types.rs
core/src/models/: auth.rs  user.rs
dioxus-core/: Cargo.toml
dioxus-core/src/: utils.rs
dioxus-core/src/state/: app.rs  auth.rs  mod.rs  types.rs
lcore/: Cargo.toml
lcore/src/: prelude.rs  storage.rs
lcore/src/api/: client.rs  constants.rs  schemas.rs
mobile/src/: main.rs
ui/: Cargo.toml  Dioxus.toml
ui/assets/styling/: apps.css  generic.css  home.css  login.css
ui/assets/styling/messenger/: main.css  messenger.css
ui/src/: apps.rs  generic.rs  home.rs  lib.rs  login.rs
ui/src/messenger/: app.rs  main.rs  messenger.rs  mod.rs
web/: Cargo.toml  Dioxus.toml
web/assets/: main.css
web/assets/styling/: main.css  web-app.css
web/src/: config.rs  logging.rs  main.rs  router.rs  storage.rs
web/src/views/: app.rs  blog.rs  login.rs  mod.rs
