[workspace]
resolver = "2"
members = [
    "core",
    "ui",
    "web",
    "desktop",
    "mobile", "dioxus-core",
]

[workspace.dependencies]
dcore = { package = "dioxus-core", path = "dioxus-core" }
dioxus = { version = "0.7" }
lcore = { package = "link-core", path = "core" }
log = "0.4.26"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
toml = "0.9"
ui = { path = "ui" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
