[package]
# the name core conflicts with the standard library
name = "lcore"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
url = "2.5.4"
