[package]
name = "link-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.44", features = ["sync"] }
url = "2.5.4"
validator = { version = "0.20", features = ["derive"] }
