[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
fern = "0.7.1"
lcore = { package = "link-core", path = "../core" }
log = "0.4.26"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"
ui = { workspace = true }
validator = { version = "0.20", features = ["derive"] }
js-sys = "0.3.77"
#wasm-bindgen = "0.2.100"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Storage",
]

[features]
default = ["web"]
web = ["dioxus/web"]
