[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
lcore = { workspace = true, package = "link-core" }
log = { workspace = true }
toml = { workspace = true }
ui = { workspace = true }
fern = "0.7.1"
js-sys = "0.3.77"
serde = { version = "1.0.218", features = ["derive"] }
#wasm-bindgen = "0.2.100"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Storage",
]

[features]
default = ["web"]
web = ["dioxus/web"]
